# capytown_G4_granprix

./: .gitignore  CapyTown_GranPrix_Documentacion_Completa.docx  README.md  desktop.ini  package.xml  setup.cfg  setup.py  test_logica_sin_robot.py
Doc/PresentacionPaper/: README.md  main.tex  refs.bib
capytown_granprix_pkg/: _probe.txt  box_detector.py  desktop_dashboard.py  loop_completion.py  maze_solver.py  pare_detector.py  scan_map_viewer.py  servo_control.py  simple_camera.py  split_merge.py  web_dashboard.py
config/: granprix_params.yaml
doc/: CapyTown_GranPrix_Laberinto.docx
launch/: granprix.launch.py
scripts/: _verify_run_granprix.sh  _verify_run_granprix2.sh  run_granprix.sh
web/: dashboard_preview.html
